--- a/package.json
+++ b/package.json
@@ -9,8 +9,11 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "commander": "^2.16.0",
+    "download-file": "^0.1.5",
     "express": "^4.16.2",
     "mysql": "^2.16.0",
-    "pdfreader": "^0.2.5"
+    "pdfreader": "^0.2.5",
+    "progress": "^2.0.0"
   }
 }
