Added CORS module, using require("sql").query

--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "license": "ISC",
   "dependencies": {
     "commander": "^2.16.0",
+    "cors": "^2.8.4",
     "download-file": "^0.1.5",
     "express": "^4.16.2",
     "mysql": "^2.16.0",
