--- a/package.json
+++ b/package.json
@@ -1,9 +1,10 @@
 {
-  "name": "pdf-node",
+  "name": "lowellscheduledatabase",
   "version": "1.0.0",
   "description": "a pdf reader",
   "main": "index.js",
   "scripts": {
+    "start":"node app.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "",
