--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "a pdf reader",
   "main": "index.js",
   "scripts": {
-    "start": "node app.js",
+    "start": "node app.js --info",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "",
