--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "cors": "^2.8.4",
     "download-file": "^0.1.5",
     "express": "^4.16.2",
+    "http": "0.0.0",
     "mysql": "^2.16.0",
     "pdfreader": "^0.2.5",
     "pg": "^7.4.3",
