--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "mysql": "^2.16.0",
     "pdfreader": "^0.2.5",
     "pg": "^7.4.3",
-    "progress": "^2.0.0"
+    "progress": "^2.0.0",
+    "uuid": "^3.3.2"
   }
 }
