--- a/package.json
+++ b/package.json
@@ -13,7 +13,9 @@
     "cheerio": "^1.0.0-rc.3",
     "cheerio-tableparser": "^1.0.1",
     "cors": "^2.8.4",
+    "csv-parse": "^4.9.0",
     "express": "^4.16.2",
+    "fs": "0.0.1-security",
     "http": "0.0.0",
     "pdfreader": "^0.2.5",
     "pg": "^7.4.3",
