--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "csv-parse": "^4.9.0",
     "express": "^4.16.2",
     "fs": "0.0.1-security",
+    "graphql-request": "^1.8.2",
     "http": "0.0.0",
     "pdfreader": "^0.2.5",
     "pg": "^7.4.3",
